trunk/Archive2/ac/d00480cc7cc905/output
main.cpp:11:7: error: array subscript is not an integer
    ar[1.2];     
      ^~~~
1 error generated.
